2004-10-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (get_object_extension): The extension to use is know
	by the caller, and cannot be selected by looking only at the
	target name.  Simplify this function to simply conditionally
	prepend $U to the given extension.
	(handle_programs, handle_libraries, handle_ltlibraries): Hard-code
	the extension to use.  This way Automake won't mistake a program
	named `foo.la' as a libtool library.
	* tests/primary3.test: New file.
	* tests/Makefile.am (TESTS): Add primary3.test.

2004-10-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Install): Link to node Extending for examples.
	(Extending): More comments about install-data-hook vs
	install-exec-hook, and link to Install.

	* configure.ac: Export @am_AUTOCONF@.
	* tests/defs.in (AUTOCONF): Define as @am_AUTOCONF@, not @AUTOCONF@,
	so the test suite runs `autoconf' and not `missing --run autoconf'.
	* tests/missing.test, tests/missing2.test: Arrange for missing
	to be used in front of autoconf even if the user has exported
	AUTOCONF.  This fixes two spurious failures reported by
	Mark D. Baushke.

	* lib/compile: Handle output.obj in addition to output.o.
	* tests/compile.test: Check for this.

2004-10-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Sources): Typo, reported by Karl Berry.

2004-10-10  Kelley Cook  <kcook@gcc.gnu.org>  (tiny change)
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in ($ac_defun_rx): Match AC_DEFUN_ONCE.
	(trace_used_macros): Trace AC_DEFUN_ONCE.
	* tests/aclocal5.test: Use AC_DEFUN_ONCE.

2004-10-10  Stepan Kasal  <kasal@ucw.cz>  (tiny change)

	* doc/automake.texi (Extending): Typo.

2004-09-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/subobj9.test: Adjust regexes after previous patch.

2004-09-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_languages, define_compiler_variable): Output
	Libtool's --tag= option before --mode=compile, because depcomp use