@@ -37,10 +37,15 @@ set -e
 ./install-sh -d d0
 test -d d0
 # Multiple directories (for make installdirs).
-./install-sh -d d1 d2 d3
+./install-sh -d d1 d2 d3 d4
 test -d d1
 test -d d2
 test -d d3
+test -d d4
+# Subdirectories
+./install-sh -d p1/p2/p3 p4//p5//p6//
+test -d p1/p2/p3
+test -d p4/p5/p6
 
 # Files.
 : > x
@@ -56,7 +61,7 @@ test -f x
 test -f z
 test -f d1/x
 test -f d1/z
-./install-sh -m 644 x z d2
+./install-sh -m 644 x z d2//
 test -f x
 test -f z
 test -f d2/x
@@ -66,10 +71,16 @@ test -f x
 test -f z
 test -f d3/x
 test -f d3/z
+./install-sh -t d4// -m 644 x z
+test -f x
+test -f z
+test -f d4/x
+test -f d4/z
 ./install-sh -T x d3/y
 test -f x
 test -f d3/y
 ./install-sh -T x d3 && exit 1
+./install-sh -T x d4// && exit 1
 
 # Ensure that install-sh works with names that include spaces
 touch 'a b'
