@@ -1,3 +1,11 @@
+2004-10-22  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/install-sh: Fix the dirname emulation to ignore trailing
+	slashes, i.e., the direname of `a/b/' is `a', not `a/b/'.  This
+	caused `install-sh a/b/' to fail.
+	* tests/instsh2.test: Augment.
+	Report from Пухальский Юрий Андреевич.
+
 2004-10-21  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (get_object_extension): The extension to use is know
